# NN_Try

./: ResNet.ipynb  concat_model_Main_best.ipynb  concat_model_convnetXlarge+vgg16-.ipynb  concat_model_densenet169+vgg16-last.ipynb  concat_model_densenet169+vgg16_batch10.ipynb  concat_model_nas+vgg16-new_test_bestResult.ipynb  concat_model_nas+vgg16.ipynb  concat_model_nas+vgg16_last_test.ipynb  concat_models.py  densenet169_v3_anysize_input.ipynb  efficientnetb7.ipynb  nasnet_mobile_91-87.ipynb  nn.py  pyproject.toml  simpleNet+flipping.ipynb  simpleNet-LAST.ipynb  simpleNet_V2.ipynb  test.ipynb  xception.py  xception_last_93-88.ipynb  xception_v2_test.ipynb
.ipynb_checkpoints/: EfficientNetV2L-checkpoint.ipynb  ResNet-checkpoint.ipynb  concat_model_Main_best-checkpoint.ipynb  concat_model_convnetXlarge+vgg16--checkpoint.ipynb  concat_model_densenet169+vgg16-checkpoint.ipynb  concat_model_densenet169+vgg16-last-checkpoint.ipynb  concat_model_nas+vgg16-checkpoint.ipynb  concat_model_nas+vgg16_last_test-checkpoint.ipynb  dens_plus_vgg-checkpoint.ipynb  densenet169-checkpoint.ipynb  densenet169_v2-checkpoint.ipynb  densenet169_v3_anysize_input-checkpoint.ipynb  efficientnetb7-checkpoint.ipynb  nasnet_mobile_91-87-checkpoint.ipynb  simpleNet-LAST-checkpoint.ipynb  test-checkpoint.ipynb  xception-checkpoint.ipynb  xception_last_93-88-checkpoint.ipynb  xception_new-checkpoint.ipynb  xception_v2_test-checkpoint.ipynb
